2006-07-23  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, sample/iTunes_fade_volume.rb:
	- Map direct-specifier-optional commands to the application class ;
	- Fixed the iTunes_fade_volume.rb sample to call app#play.

2006-07-19  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
	- Fixed methods with direct-parameter mapped to the application class ;
	- Do not warn for classes that inherit from themselves (not a bug) ;
	- Added support for aliases (Ruby String -> Carbon AliasHandle) ;
	- Fixed integers-packed-into-string arguments handling ;
	- Handle 'text' element types as strings.

	* sample/iTunes_fade_volume.rb:
	New sample.

2006-07-13  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c, src/lib/rbosa.rb:
	- Do not overwrite new class constants if they already exist ;
	- When a class in the sdef inherits from a class that is not 
	  defined, raises a warning and falls back on OSA::Element.
	- When guessing the class type of an object specifier, make sure
	  we don't check more than 4 characters.

	* sample/iChat_uptime.rb:
	New sample.

2006-07-12  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Prefix generated constant names with a 'C' in case the name starts
	  with an digit, to avoid an exception ;
	- Added write-support for properties ;
	- Fixed AE -> Ruby boolean type conversion ;
	- When passing parameters, check if OSA::Element objects are given 
	  and use them instead of creating new ones.

	* sample/iTunes_control.rb:
	Use the mute property.

	* TODO:
	- Updated to mention events timeout ;
	- Closed the 'write-support' point.

2006-07-11  Laurent Sansonetti  <lsansonetti@apple.com>

	* extconf.rb, src/rbosa.h:
	Generate modified Ruby headers at build time to avoid symbol
	collisions (ID, T_DATA).

2006-07-10  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/iTunes_control.rb: