@@ -1,8 +1,11 @@
 2006-07-23  Laurent Sansonetti  <lsansonetti@apple.com>
 
-	* src/lib/rbosa.rb, sample/iTunes_fade_volume.rb:
+	* src/lib/rbosa.rb:
 	- Map direct-specifier-optional commands to the application class ;
-	- Fixed the iTunes_fade_volume.rb sample to call app#play.
+    - Do not override methods if they are already defined.
+
+    * sample/iTunes_fade_volume.rb:
+	Fixed the iTunes_fade_volume.rb sample to call app#play ;
 
 2006-07-19  Laurent Sansonetti  <lsansonetti@apple.com>
 
